Se actualiza layout de un creador.

--- a/themes/default/templates/creador.ejs
+++ b/themes/default/templates/creador.ejs
@@ -43,7 +43,8 @@
 
         <% if (studios.length > 0) { %>
             <div class="mt-5 mb-5">
-                <h3 class="text-center">Estudios de Videojuegos</h3>
+                <h3 class="text-center text-primary">Estudios de Videojuegos</h3>
+                <hr class="text-primary">
             </div>
         <% } %>
 
@@ -79,7 +80,8 @@
 
         <% if (productos.length > 0) { %>
             <div class="mt-5 mb-5">
-                <h3 class="text-center">Productos</h3>
+                <h3 class="text-center text-primary">Productos</h3>
+                <hr class="text-primary">
             </div>
         <% } %>
 
