--- a/themes/default/templates/_footer.ejs
+++ b/themes/default/templates/_footer.ejs
@@ -13,7 +13,7 @@
                         <%- site.social_accounts.map(info => `<li><a href='${info.url}'>${info.name}</a></li>`).join("\n") %>
                     </ul>
                 </p>
-                <p>Contribuye a esta plataforma en <a href="#">nuestra cuenta de GitHub</a>.</p>
+                <p>Contribuye a esta plataforma en <a href="https://github.com/GameDev-Cuba/creadores-cubanos-videojuegos-website/">nuestra cuenta de GitHub</a>.</p>
             </div>
         </div>
     </footer>
