Fixes favicon path in theme.

--- a/themes/default/templates/_header.ejs
+++ b/themes/default/templates/_header.ejs
@@ -19,7 +19,7 @@
         <title>
             <%= title %>
         </title>
-        <link rel="icon" type="image/x-icon" href="/_static/<%= site.favicon %>">
+        <link rel="icon" type="image/x-icon" href="/<%= site.favicon %>">
 
 
         <link rel="stylesheet" href="/_static/bootstrap/simplex/bootstrap.min.css">
