Se muestra correo de contacto.

--- a/themes/default/templates/_footer.ejs
+++ b/themes/default/templates/_footer.ejs
@@ -13,6 +13,9 @@
                         <%- site.social_accounts.map(info => `<li><a href='${info.url}'>${info.name}</a></li>`).join("\n") %>
                     </ul>
                 </p>
+                <p>
+                    Escríbenos a <code><%= site.contact_email %></code>.
+                </p>
                 <p>Contribuye a esta plataforma en <a href="https://github.com/GameDev-Cuba/creadores-cubanos-videojuegos-website/">nuestra cuenta de GitHub</a>.</p>
             </div>
         </div>
