Adds newsletter registration form.

--- a/themes/default/templates/home.ejs
+++ b/themes/default/templates/home.ejs
@@ -184,4 +184,35 @@
 
     </div> <!-- containter -->
 
+    <div class="container"> <!-- newsletter -->
+
+
+        <div class="card">
+
+            <div class="card-body">
+                <h5 class="card-title">¡Regístrate a nuestro boletín digital!</h5>
+                <p class="card-text">
+                    Esta es la forma más efectiva para estar al tanto de lo que acontece en nuestra comunidad.
+                    Nuestros eventos, nuestras publicaciones, todas las noticias alrededor de nuestra comunidad.
+                </p>
+            </div>
+
+            <div class="card-body">
+
+                <script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js"></script>
+                <script>
+                    hbspt.forms.create({
+                        region: "eu1",
+                        portalId: "26774415",
+                        formId: "c0ec3a15-70e0-4dd0-9fb1-d4a651e8357f"
+                    });
+                </script>
+    
+            </div>
+        </div>
+
+    
+
+    </div>
+
     <%- include("_footer") %>
