Adds link to newsletter form.

--- a/themes/default/templates/_footer.ejs
+++ b/themes/default/templates/_footer.ejs
@@ -17,6 +17,9 @@
                     Escríbenos a <code><%= site.contact_email %></code>.
                 </p>
                 <p>Contribuye a esta plataforma en <a href="https://github.com/GameDev-Cuba/creadores-cubanos-videojuegos-website/">nuestra cuenta de GitHub</a>.</p>
+                <p>
+                    Para mantenerte actualizado, <a href="http://eepurl.com/iimyHj">suscríbete a nuestro boletín</a>
+                </p>
             </div>
         </div>
     </footer>
