--- a/themes/default/templates/_footer.ejs
+++ b/themes/default/templates/_footer.ejs
@@ -6,7 +6,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <p>Copyright 2022 Creadores Cubanos de Videojuegos</p>
+                <p>Copyright <%= new Date().getFullYear() %> Creadores Cubanos de Videojuegos</p>
                 <p>
                     Síguenos en: 
                     <ul>
