--- a/themes/default/templates/_header.ejs
+++ b/themes/default/templates/_header.ejs
@@ -23,7 +23,7 @@
 
 
         <link rel="stylesheet" href="/_static/bootstrap/simplex/bootstrap.min.css">
-        <link rel="stylesheet" href="/_static/css/custom.css">
+        <link rel="stylesheet" href="/_static/css/custom.css?v=2">
         <link rel="stylesheet" href="/_static/fontawesome/css/all.min.css">
         <script src="/_static/js/jquery.min.js"></script>
         <script src="/_static/js/bootstrap.min.js"></script>
